--- a/day_3_itinerary.html
+++ b/day_3_itinerary.html
@@ -69,13 +69,18 @@
             </h2>
         </header>
 
-
-        <!-- 封面圖片 -->
-        <div class="mb-6">
-            <img src="image/day3.jpg" alt="Day 3 清水寺封面" class="w-full rounded-2xl shadow-lg">
-        </div>
+
+
+        <!-- 封面圖片 -->
+
+        <div class="mb-6">
+
+            <img src="image/day3.jpg" alt="Day 3 清水寺封面" class="w-full rounded-2xl shadow-lg">
+
+        </div>
+
         <!-- 區塊一：本日交通路線總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">🚌</span> 本日交通路線總覽
             </h3>
@@ -171,62 +176,13 @@
                 </div>
             </div>
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/yqNspUVLiNWGDX859" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/yqNspUVLiNWGDX859" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                     🗺️ 吃早餐
                 </a>
             </div>             
         </div>
         
-        <!-- 區塊三：清水寺東山步行路線 -->
-        <div class="route-card bg-pink-50 border-t-4 border-pink-500">
-            <h3 class="text-2xl font-semibold text-pink-800 mb-4 flex items-center">
-                <span class="mr-2">⛩️</span> 清水寺東山步行路線
-            </h3>
-            
-            <p class="text-sm text-gray-600 font-bold mb-4">
-                景點之間皆為步行。建議穿過二年坂、三年坂時，邊走邊逛紀念品店和享用點心。
-            </p>
-
-            <!-- 景點列表 -->
-            <ol class="space-y-4 text-gray-800 list-decimal list-inside pl-4">
-                <li>
-                    <span class="font-bold text-pink-600">清水寺 (Kiyomizu-dera)</span>
-                    <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>1.5 小時</strong> (含參道步行上山)<br>
-                        <span class="font-bold text-pink-700">特色：</span>世界遺產，著名的懸空清水舞台。
-                    </p>
-                </li>
-                <li>
-                    <span class="font-bold text-pink-600">三年坂 (Sannen-zaka) 與 二年坂 (Ninen-zaka)</span>
-                    <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>1.5 小時</strong> (邊走邊逛)<br>
-                        <span class="font-bold text-pink-700">特色：</span>最具代表性的石板老街，兩旁充滿傳統町家建築、工藝品店。
-                    </p>
-                </li>
-                <li>
-                    <span class="font-bold text-pink-600">一寧坂 (Ichinen-zaka) &amp; 石塀小路 (Ishibei-koji)</span>
-                    <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>0.5 小時</strong><br>
-                        <span class="font-bold text-pink-700">特色：</span>隱藏在主街道旁的小徑，特別是高石塀小路，氛圍寧靜優雅，充滿高級日式旅館。
-                    </p>
-                </li>
-                <li>
-                    <span class="font-bold text-pink-600">八坂神社 (Yasaka Shrine)</span>
-                    <p class="text-sm text-gray-600 ml-5">
-                        <span class="font-bold text-pink-700">預計停留：</span><strong>1 小時</strong> (含主殿)<br>
-                        <span class="font-bold text-pink-700">特色：</span>位於祇園東側，是京都最具代表性的神社之一，晚上燈火通明。
-                    </p>
-                </li>
-            </ol>
-			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/xrEP8bFaQc9Pahto7" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
-                🗺️ 路線圖
-            </a>
-            </div>			
-        </div>
-
         <!-- 區塊三 (重複的區塊，已修正整合) -->
-        <!-- 原檔案中有重複的「清水寺東山步行路線」標題區塊，這裡予以保留但內容結構稍作整理以符合原意 -->
         <div class="route-card bg-pink-50 border-t-4 border-pink-500">
             <h3 class="text-2xl font-semibold text-pink-800 mb-4 flex items-center">
                 <span class="mr-2">⛩️</span> 清水寺東山詳細行程
@@ -289,7 +245,7 @@
                 </div>                                             
             </div>
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/zATpNgRSXvVv14Xq8" target="_blank" 
+                <a href="https://maps.app.goo.gl/xrEP8bFaQc9Pahto7" target="_blank" 
                 class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
