--- a/day_4_itinerary.html
+++ b/day_4_itinerary.html
@@ -69,13 +69,18 @@
             </h2>
         </header>
 
-
-        <!-- 封面圖片 -->
-        <div class="mb-6">
-            <img src="image/day4.jpg" alt="Day 4 宇治封面" class="w-full rounded-2xl shadow-lg">
-        </div>
+
+
+        <!-- 封面圖片 -->
+
+        <div class="mb-6">
+
+            <img src="image/day4.jpg" alt="Day 4 宇治封面" class="w-full rounded-2xl shadow-lg">
+
+        </div>
+
         <!-- 區塊一：本日交通路線總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">🍵</span> 本日交通路線總覽
             </h3>
@@ -137,7 +142,7 @@
         </div>
 
         <!-- 區塊二：飯店 → 宇治：分步導航 (去程) -->
-        <div class="route-card">
+        <div class="route-card bg-gray-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🌅</span> 飯店 → 宇治：分步導航
             </h3>
@@ -152,8 +157,7 @@
                     <p class="text-sm text-gray-600 ml-8">
                         <span class="font-bold text-blue-700">區間：</span> <strong>飯店</strong> → <strong>JR 東福寺站</strong><br>
                         <span class="font-bold text-blue-700">時長：</span> 約 <strong>15-20 分鐘</strong><br>
-                        <span class="font-bold text-blue-700">指示：</span> 沿著與 Day 5 相同的路線，步行至 **JR 東福寺站**月台。
-                    </p>
+                    <span class="font-bold text-blue-700">指示：</span> 沿著與 步行至 <strong>JR 東福寺站</strong>月台。 </p>
                 </div>
 
                 <!-- 步驟 2: Tofuku-ji -> Uji JR Line -->
@@ -171,6 +175,11 @@
                     </p>
                 </div>
             </div>
+            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+                <a href="https://maps.app.goo.gl/3SZF5NdiT4tM8UVz9" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4"> 
+                    🗺️ 路線圖
+                </a>
+            </div> 			
         </div>
 
         <!-- 區塊三：上午：宇治一日觀光行程 -->
