--- a/day_5_itinerary.html
+++ b/day_5_itinerary.html
@@ -69,13 +69,18 @@
             </h2>
         </header>
 
-
-        <!-- 封面圖片 -->
-        <div class="mb-6">
-            <img src="image/day5.jpg" alt="Day 5 伏見稻荷封面" class="w-full rounded-2xl shadow-lg">
-        </div>
+
+
+        <!-- 封面圖片 -->
+
+        <div class="mb-6">
+
+            <img src="image/day5.jpg" alt="Day 5 伏見稻荷封面" class="w-full rounded-2xl shadow-lg">
+
+        </div>
+
         <!-- 區塊一：本日交通路線總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">🚄</span> 本日交通路線總覽
             </h3>
@@ -137,7 +142,7 @@
         </div>
 
         <!-- 區塊二：飯店 → 伏見稻荷：分步導航 (去程) -->
-        <div class="route-card">
+        <div class="route-card bg-gray-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🌅</span> 飯店 → 伏見稻荷：分步導航
             </h3>
@@ -170,6 +175,11 @@
                     </p>
                 </div>
             </div>
+			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
+              <a href="https://maps.app.goo.gl/eThKuKiiQfv6YSZt5" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                🗺️ 路線圖
+            </a>
+            </div>			
         </div>
 
         <!-- 區塊三：伏見稻荷山環山參拜路線 -->
@@ -339,7 +349,7 @@
                 </li>				
           </ol>
 			<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/MVnJNs5kYzsxGg89A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/b9p8RUXcdKUNpr1f7" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-yellow-300 rounded-lg hover:bg-yellow-500 transition duration-150 shadow-md mt-4">
                 🗺️ 路線圖
             </a>
             </div>				
