--- a/day_6_itinerary.html
+++ b/day_6_itinerary.html
@@ -69,13 +69,18 @@
             </h2>
         </header>
 
-
-        <!-- 封面圖片 -->
-        <div class="mb-6">
-            <img src="image/day6.jpg" alt="Day 6 天橋立封面" class="w-full rounded-2xl shadow-lg">
-        </div>
+
+
+        <!-- 封面圖片 -->
+
+        <div class="mb-6">
+
+            <img src="image/day6.jpg" alt="Day 6 天橋立封面" class="w-full rounded-2xl shadow-lg">
+
+        </div>
+
         <!-- 區塊一：本日交通路線總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">🚆</span> 本日交通路線總覽
             </h3>
@@ -105,7 +110,7 @@
             </div>
             <!-- 新增丹後海陸交通公車網站連結按鈕 -->
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://www.tankai.jp/tw/bus/tankai-bus/" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-purple-300 rounded-lg hover:bg-purple-400 transition duration-150 shadow-md mt-4">
+                <a href="https://www.tankai.jp/tw/bus/tankai-bus/" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-gary-500 bg-blue-300 rounded-lg hover:bg-blue-400 transition duration-150 shadow-md mt-4">
                     🚌 丹後海陸交通公車官方網站
             </a>
             </div>
@@ -143,7 +148,7 @@
         </div>
 
         <!-- 區塊二：去程：京都 → 天橋立：分步導航 -->
-        <div class="route-card">
+        <div class="route-card bg-gray-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🌅</span> 去程：京都 → 天橋立：火車時刻
             </h3>
@@ -176,7 +181,7 @@
                     </p>
                 </div>
             	<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/3q5oVoDVKEHVoGK3A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-400 rounded-lg hover:bg-gray-700 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/3q5oVoDVKEHVoGK3A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                     🗺️ 乘車路線圖
                 </a>
             	</div> 				
