--- a/day_8_itinerary.html
+++ b/day_8_itinerary.html
@@ -69,13 +69,18 @@
             </h2>
         </header>
 
-
-        <!-- 封面圖片 -->
-        <div class="mb-6">
-            <img src="image/day8.jpg" alt="Day 8 返程封面" class="w-full rounded-2xl shadow-lg">
-        </div>
+
+
+        <!-- 封面圖片 -->
+
+        <div class="mb-6">
+
+            <img src="image/day8.jpg" alt="Day 8 返程封面" class="w-full rounded-2xl shadow-lg">
+
+        </div>
+
         <!-- 區塊一：航班與時間總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">✈️</span> 航班與時間總覽
             </h3>
@@ -131,7 +136,7 @@
         </div>
 
         <!-- 區塊二：飯店 → 關西機場：分步導航 -->
-        <div class="route-card">
+        <div class="route-card bg-gray-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🚂</span> 飯店 → 關西機場：分步導航 (Haruka)
             </h3>
