--- a/day_7_itinerary.html
+++ b/day_7_itinerary.html
@@ -110,7 +110,7 @@
         </div>
 
         <!-- 區塊一：本日交通路線總覽 -->
-        <div class="route-card bg-indigo-50 border-t-4 border-indigo-500">
+        <div class="route-card bg-blue-100 border-t-4 border-blue-500">
             <h3 class="text-2xl font-semibold text-indigo-800 mb-4 flex items-center">
                 <span class="mr-2">🚞</span> 本日交通路線總覽
             </h3>
@@ -175,7 +175,7 @@
         </div>
 
         <!-- 區塊二：飯店 → 貴船口：分步導航 (去程) -->
-        <div class="route-card">
+        <div class="route-card bg-gray-100 border-t-4 border-red-500">
             <h3 class="text-2xl font-semibold text-gray-800 mb-5 flex items-center border-b pb-3">
                 <span class="mr-2">🌅</span> 飯店 → 貴船口：分步導航
             </h3>
