--- a/day_6_itinerary.html
+++ b/day_6_itinerary.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 票券建議：</span>
-                    <span>建議購買 <strong>JR 關西廣域鐵路周遊券</strong> 或 <strong>天橋立伊根周遊券</strong>，以節省費用。</span>
+                    <span>建議購買 <strong><a href="https://www.kkday.com/zh-tw/product/20317-japan-kansai-wide-area-pass" target="_blank">JR關西廣域鐵路周遊券</a></strong> 或 <strong><a href="https://www.kkday.com/zh-tw/product/125463-amanohashidate-sandbar-ine-bay-tango-province-sightseeing-kyoto?groupOid=999" target="_blank">天橋立伊根周遊券</a></strong>，以節省費用。</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💡 提示：</span>
@@ -181,7 +181,7 @@
                     </p>
                 </div>
             	<div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/3q5oVoDVKEHVoGK3A" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
+                <a href="https://maps.app.goo.gl/SfHyveei4UFNWDbf6" target="_blank" class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-red-400 rounded-lg hover:bg-red-700 transition duration-150 shadow-md mt-4">
                     🗺️ 乘車路線圖
                 </a>
             	</div> 				
