--- a/day_7_itinerary.html
+++ b/day_7_itinerary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 7 (2/10)：貴船、鞍馬健行與叡山電車</title>
+    <title>Day 7 (2/10)：貴船、鞍馬健行與先斗町</title>
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -92,21 +92,16 @@
         <!-- 頁面標題 -->
         <header class="text-center mb-6">
             <h1 class="text-3xl font-bold text-gray-800 flex items-center justify-center">
-                <span class="mr-2">📅</span> Day 7 (2/10)：貴船、鞍馬寺與叡山電車
+                <span class="mr-2">📅</span> Day 7 (2/10)：貴船、鞍馬與先斗町
             </h1>
             <h2 class="text-xl text-gray-600 mt-1">
-                主要任務：體驗京都郊區山林健行，參拜貴船與鞍馬寺
+                主要任務：山林健行與鴨川納涼床風情
             </h2>
         </header>
 
-
-
         <!-- 封面圖片 -->
-
         <div class="mb-6">
-
             <img src="image/day7.jpg" alt="Day 7 貴船封面" class="w-full rounded-2xl shadow-lg">
-
         </div>
 
         <!-- 區塊一：本日交通路線總覽 -->
@@ -116,26 +111,22 @@
             </h3>
 
             <p class="text-gray-700 mb-4">
-                本日移動路線：<strong>飯店 → 九條河原町 (公車) → 七條站 (京阪線) → 貴船口 (叡山電車) → 鞍馬 (健行/叡電) → 飯店</strong>。
+                本日移動路線：<strong>飯店 → 出町柳 → 鞍馬/貴船 (健行) → 出町柳 → <span class="text-red-600">先斗町 (晚餐)</span> → 飯店</strong>。
             </p>
 
             <!-- 關鍵數據列表 -->
             <div class="space-y-2">
                 <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-indigo-600">⏱️ 單程時長：</span>
-                    <span>約 <strong>55-65 分鐘</strong> (飯店至貴船口，含公車轉乘)</span>
+                    <span class="font-bold w-32 text-indigo-600">⏱️ 行程亮點：</span>
+                    <span>上午體驗山林靈氣，傍晚享受<strong>先斗町</strong>的京都巷弄氛圍。</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">💰 總交通費用：</span>
-                    <span>約 <strong>¥1,150+</strong> (公車+京阪+叡電往返)</span>
+                    <span>約 <strong>¥1,400+</strong> (含京阪、叡電及公車)</span>
                 </div>
                 <div class="flex items-center text-gray-700">
                     <span class="font-bold w-32 text-indigo-600">🎯 票券建議：</span>
-                    <span>建議考慮購買 <strong>叡山電車一日券</strong> (適用於公車/地鐵+叡電全線)。</span>
-                </div>
-                <div class="flex items-center text-gray-700">
-                    <span class="font-bold w-32 text-indigo-600">💡 提示：</span>
-                    <span>貴船至鞍馬的<strong>山林步道</strong>約 1 小時，坡度較大，務必穿著適合健行的鞋子。</span>
+                    <span>建議考慮購買 <strong>叡山電車一日券</strong>。</span>
                 </div>
             </div>
         </div>
@@ -295,67 +286,91 @@
             </ol>
         </div>
 
-        <!-- 區塊四：傍晚回程：鞍馬 → 飯店 -->
-        <div class="route-card bg-red-50 border-t-4 border-red-500">
-            <h3 class="text-2xl font-semibold text-red-800 mb-4 flex items-center">
-                <span class="mr-2">🛌</span> 傍晚回程：鞍馬 → 飯店
+        <!-- 區塊四：傍晚回程：鞍馬 → 先斗町 (新增) -->
+        <div class="route-card bg-purple-50 border-t-4 border-purple-500">
+            <h3 class="text-2xl font-semibold text-purple-800 mb-4 flex items-center">
+                <span class="mr-2">🏮</span> 傍晚行程：鞍馬 → 先斗町 (Pontocho)
             </h3>
+            
+            <p class="text-sm text-gray-600 mb-4">
+                離開山林後，前往京都最迷人的花街之一「先斗町」，在鴨川畔享受晚餐。
+            </p>
 
             <!-- 交通步驟 -->
-            <div class="space-y-3 text-gray-700">
+            <div class="space-y-4 text-gray-700">
                 <div class="flex items-start">
-                    <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 1：</span>
-                    <span class="ml-2">從鞍馬寺步行或搭纜車至 <strong>鞍馬站</strong>。</span>
-                </div>
-                <div class="flex items-start">
-                    <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 2：</span>
+                    <span class="font-bold w-16 flex-shrink-0 text-purple-600">步驟 1：</span>
                     <span class="ml-2">
-                        搭乘叡山電車返回出町柳站。
+                        <strong>鞍馬站</strong> → <strong>出町柳站</strong> (叡山電車)
                         <br>
-                        <span class="font-bold text-blue-700">區間：</span> <strong>鞍馬站</strong> → <strong>出町柳站</strong>
-                        <br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> <strong>叡山本線</strong> (往出町柳方向)<br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>30 分鐘</strong>
-                        <br>
-                        <span class="font-bold text-blue-700">費用：</span> <span
-                            class="text-red-600 font-extrabold">¥470</span>
+                        <span class="text-sm text-gray-500">時長：約 30 分鐘 / 費用：¥470</span>
                     </span>
                 </div>
                 <div class="flex items-start">
-                    <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 3：</span>
+                    <span class="font-bold w-16 flex-shrink-0 text-purple-600">步驟 2：</span>
                     <span class="ml-2">
-                        從出町柳站轉乘京阪與公車返回飯店。
+                        <strong>出町柳站</strong> → <strong>三條站 (Sanjo)</strong> (京阪電車)
                         <br>
-                        <span class="font-bold text-blue-700">區間：</span> <strong>出町柳站</strong> → <strong>九條河原町</strong>
+                        <span class="font-bold text-blue-700">指示：</span> 轉乘京阪本線（特急/準急皆可），僅需搭乘 2 站。
                         <br>
-                        <span class="font-bold text-blue-700">交通：</span> 京阪電車 (轉) 公車
-                        <br>
-                        <span class="font-bold text-blue-700">車種/路線：</span> 京阪本線至<strong>七条站</strong>，轉乘 <strong>207
-                            號</strong>公車
-                        <br>
-                        <span class="font-bold text-blue-700">時長：</span> 約 <strong>25-30 分鐘</strong>
-                        <br>
-                        <span class="font-bold text-blue-700">費用：</span> <span class="text-red-600 font-extrabold">約
-                            ¥510</span> (京阪 ¥280 + 公車 ¥230)
+                        <span class="text-sm text-gray-500">時長：約 3-5 分鐘 / 費用：¥220</span>
                     </span>
                 </div>
                 <div class="flex items-start">
-                    <span class="font-bold w-16 flex-shrink-0 text-red-600">步驟 4：</span>
-                    <span class="ml-2">從<strong>九條河原町</strong>站下車後，步行約 <strong>5-7 分鐘</strong>回 <strong>CHISUN PREMIUM
-                            京都九條</strong> 飯店。</span>
+                    <span class="font-bold w-16 flex-shrink-0 text-purple-600">步驟 3：</span>
+                    <span class="ml-2">
+                        步行至 <strong>先斗町 (Pontocho)</strong>
+                        <br>
+                        <span class="font-bold text-blue-700">指示：</span> 從三條站出站，過三條大橋，左手邊即是先斗町入口。這裡是一條狹窄的石板路，兩旁充滿各式餐廳與居酒屋。
+                    </span>
                 </div>
             </div>
-
         </div>
 
-        <!-- 區塊五：餐點規劃 (Meals) -->
+        <!-- 區塊五：先斗町晚餐與回飯店 (新增) -->
+        <div class="route-card bg-gray-100 border-t-4 border-gray-500">
+            <h3 class="text-2xl font-semibold text-gray-800 mb-4 flex items-center">
+                <span class="mr-2">🍽️</span> 晚餐與回程
+            </h3>
+
+            <!-- 晚餐建議 -->
+            <div class="mb-6 border-b border-gray-300 pb-4">
+                <h4 class="text-lg font-bold text-gray-900 mb-2">晚餐建議：先斗町覓食</h4>
+                <p class="text-sm text-gray-700">
+                    先斗町從三條通延伸到四條通。您可以邊走邊看，選擇喜歡的店家。
+                    <br>
+                    <strong>推薦類型：</strong> 京料理、壽喜燒、或鴨川納涼床（夏季限定，但冬季景色也美）。
+                    <br>
+                    若想吃平價一點，可穿過先斗町到達<strong>木屋町通</strong>或<strong>河原町</strong>一帶。
+                </p>
+            </div>
+
+            <!-- 回飯店 -->
+            <div>
+                <h4 class="text-lg font-bold text-gray-900 mb-2">回飯店：先斗町 → 飯店</h4>
+                <p class="text-sm text-gray-700 mb-2">
+                    建議步行至<strong>四條河原町</strong>或<strong>京阪祇園四條站</strong>搭車。
+                </p>
+                
+                <ul class="list-disc list-inside text-sm text-gray-700 ml-2 space-y-2">
+                    <li>
+                        <strong>方法 A (公車 - 推薦)：</strong> 走到四條河原町公車站，搭乘 <strong>205 號</strong>公車，至「九條河原町」站下車，步行回飯店。
+                    </li>
+                    <li>
+                        <strong>方法 B (電車)：</strong> 從<strong>祇園四條站</strong>搭乘京阪電車至<strong>七條站</strong>，轉乘 207/202 公車或計程車。
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- 區塊六：午餐與點心 (Meals) - 晚餐已整合至上方 -->
         <div class="route-card bg-lime-50 border-t-4 border-lime-500">
             <h3 class="text-2xl font-semibold text-lime-800 mb-4 flex items-center">
-                <span class="mr-2">🍽️</span> 餐點規劃
+                <span class="mr-2">🍵</span> 午餐與點心
             </h3>
 
             <!-- 午餐 -->
-            <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
+            <h4 class="text-lg font-bold text-gray-900 mb-2 mt-2 border-b border-lime-200 pb-1">
                 午餐：Nagomiya Kotengu 和み家 心天狗
             </h4>
             <p class="text-sm text-gray-700 ml-4 space-y-1">
@@ -380,21 +395,6 @@
             </p>
             <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
                 <a href="https://maps.app.goo.gl/173t189w3yQ82Lqv9" target="_blank"
-                    class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
-                    🗺️ 地圖連結
-                </a>
-            </div>
-
-            <!-- 晚餐 -->
-            <h4 class="text-lg font-bold text-gray-900 mb-2 mt-4 border-b border-lime-200 pb-1">
-                晚餐：Kintaro(キンタロウ )
-            </h4>
-            <p class="text-sm text-gray-700 ml-4 space-y-1">
-                <span class="font-bold text-blue-700">建議：</span> 由於本日健行體力消耗大，推薦回到飯店附近，選擇一家舒適的居酒屋。<br>
-                <span class="font-bold text-blue-700">選項：</span> 氣氛溫馨的日式居酒屋，提供串燒、炸串等多樣化的料理，價格合理，是當地受歡迎的聚餐場所。
-            </p>
-            <div class="flex space-x-2 px-4 whitespace-nowrap justify-end">
-                <a href="https://maps.app.goo.gl/nA9UjbndcPrDNFWY8" target="_blank"
                     class="inline-flex items-center justify-center px-3 py-1 text-sm font-medium text-white bg-lime-600 rounded-lg hover:bg-lime-700 transition duration-150 shadow-md mt-2 ml-4">
                     🗺️ 地圖連結
                 </a>
