--- a/tools.html
+++ b/tools.html
@@ -46,7 +46,7 @@
     <!-- Navigation Bar -->
     <div class="sticky top-0 z-10 bg-white border-b border-gray-200 shadow-md mb-6 py-2 overflow-x-auto">
         <div class="flex space-x-2 px-4 whitespace-nowrap">
-            <a href="index.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
+            <a href="itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">總覽</a>
             <!-- Active Link -->
             <a href="tools.html" class="px-3 py-1 text-sm font-semibold rounded-full bg-purple-600 text-white shadow-lg transition duration-150">實用工具</a>
             <a href="day_1_itinerary.html" class="px-3 py-1 text-sm font-medium rounded-full text-gray-700 bg-gray-100 hover:bg-gray-200 transition duration-150">Day 1</a>
