--- a/pic.html
+++ b/pic.html
@@ -53,29 +53,6 @@
             opacity: 1;
         }
     </style>
-</head>
-
-<body>
-    <!-- Swiper -->
-    <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="pic/001.JPG" alt="Day 0"></div>
-            <div class="swiper-slide"><img src="pic/002.JPG" alt="Day 1"></div>
-            <div class="swiper-slide"><img src="pic/003.JPG" alt="Day 2"></div>
-            <div class="swiper-slide"><img src="pic/004.JPG" alt="Day 3"></div>
-            <div class="swiper-slide"><img src="pic/005.JPG" alt="Day 4"></div>
-            <div class="swiper-slide"><img src="pic/006.JPG" alt="Day 5"></div>
-            <div class="swiper-slide"><img src="pic/007.JPG" alt="Day 6"></div>
-            <div class="swiper-slide"><img src="pic/008.JPG" alt="Day 7"></div>
-            <div class="swiper-slide"><img src="pic/009.JPG" alt="Day 8"></div>
-            <div class="swiper-slide"><img src="pic/010.JPG" alt="Day 8"></div>
-            <div class="swiper-slide"><img src="pic/011.JPG" alt="Day 8"></div>
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-
     <!-- Floating Home Button -->
     <a href="index.html"
         style="position: fixed; bottom: 20px; right: 20px; z-index: 1000; background: rgba(255, 255, 255, 0.2); backdrop-filter: blur(5px); padding: 12px; border-radius: 50%; color: white; display: flex; align-items: center; justify-content: center; text-decoration: none; border: 1px solid rgba(255,255,255,0.3); transition: background 0.3s;"
@@ -94,6 +71,7 @@
     <!-- Initialize Swiper -->
     <script>
         var swiper = new Swiper(".mySwiper", {
+            zoom: true,
             pagination: {
                 el: ".swiper-pagination",
                 clickable: true,
@@ -105,6 +83,6 @@
             loop: false,
         });
     </script>
-</body>
+    </body>
 
 </html>
