--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <div class="btn-group">
             <a href="itinerary.html" class="btn">詳細行程內容</a>
             <a href="pic.html" class="btn">滑動圖片網頁</a>
+            <a href="upload.html" class="btn">上傳活動照片</a>
         </div>
     </div>
 
