--- a/itinerary.html
+++ b/itinerary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2026 京都八日遊行程總覽</title>    
+    <title>2026 京都八日遊行程總覽</title>
     <!-- PWA Support -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#d4af37">
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="icons/icon-192.png">
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    
+
     <!-- Shared CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -463,7 +463,7 @@
                         4 (2/7)：宇治與銀閣寺</a></li>
                 <li><a href="day_5_itinerary.html"
                         class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day
-                        5 (2/8)：伏見稻荷與東福寺)</a></li>
+                        5 (2/8)：伏見稻荷與東福寺</a></li>
                 <li><a href="day_6_itinerary.html"
                         class="px-3 py-1 text-sm font-semibold rounded-full bg-green-600 text-white shadow-lg transition duration-150">Day
                         6 (2/9)：天橋立與伊根舟屋</a></li>
