--- a/upload.html
+++ b/upload.html
@@ -183,35 +183,43 @@
 
         <div class="days-grid">
             <!-- REPLACE THESE LINKS WITH YOUR ACTUAL GOOGLE PHOTOS ALBUM LINKS -->
-            <a href="https://photos.app.goo.gl/w42B29mpHTsK49Td8" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipMu-auSr-xFfFNNku7RnO92ZWeBNrqS-U43ECBHTtlE5Gpam1AFua4Cj5KPXDomgw"
+                target="_blank" class="btn">
                 Day 1
-                <span>抵達京都</span>
+                <span>神戶、奈良</span>
             </a>
-            <a href="https://photos.app.goo.gl/B5Dd2m5yZjcjdjZ18" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipP_Ap7vT4gnvYOjcCr0mCvdc3skH1NYa-wbm_Ghr_M4ft4mzf0MI70a6DQdbckDCw"
+                target="_blank" class="btn">
                 Day 2
-                <span>清水寺</span>
+                <span>嵐山、天龍寺</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY3" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipN0aV1_8JpYB6M7SoFnoH7NkLylEyM0QenVCe4GwlnZ8xtYygKozbw9jZY6jW-5_w"
+                target="_blank" class="btn">
                 Day 3
-                <span>嵐山</span>
+                <span>清水寺、東山古街與祇園</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY4" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipPaIVAD3cpchX-Jk64d4GK2MOALdsQAgSpRBIdB6cVVj3jhFvY6JFc55xQmF3BHFQ"
+                target="_blank" class="btn">
                 Day 4
-                <span>金閣寺</span>
+                <span>宇治、銀閣寺</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY5" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipMGi0erBW9BSSjafFCA3tU0uoy0eTvtvdj7_R-r7jjlq6k6YjCw8fkbYUhJjF2wdQ"
+                target="_blank" class="btn">
                 Day 5
-                <span>伏見稻荷</span>
+                <span>伏見稻荷、購物</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY6" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipM2de_XpMIeBJQga23EqQPwxlGoyaidYkTzz4XO4tW2WZ-6ISXG9IzpB_VBcl5kzA"
+                target="_blank" class="btn">
                 Day 6
-                <span>奈良</span>
+                <span>天橋立、伊根舟屋</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY7" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipOJCmsIe46QCv3Mp3e4rn_HSNnHOjVtllmHKl-5idrIyZRt-K7PytBGHNoADFMEjA"
+                target="_blank" class="btn">
                 Day 7
-                <span>宇治</span>
+                <span>貴船、鞍馬與叡山電車</span>
             </a>
-            <a href="https://photos.app.goo.gl/YOUR_ALBUM_ID_DAY8" target="_blank" class="btn">
+            <a href="https://photos.google.com/share/AF1QipNFsvZvBHBcgCD6Q-tR7Cv9sogmnbHhw20SUg2eyiO8zl73OcP33GCYphyLzVDdYw"
+                target="_blank" class="btn">
                 Day 8
                 <span>返程</span>
             </a>
