--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pic/001.JPG');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('pic/kyoto_hand_drawn_bg.png');
             background-size: cover;
             background-position: center;
         }
